[gd_scene load_steps=5 format=3 uid="uid://dlgcwb2dfncnu"]

[ext_resource type="Script" uid="uid://c1cuce1jgxpdd" path="res://Scene/LearningPortal.tscn/Artithmethic_levels/arithmetic_levels.gd" id="1_bk81l"]
[ext_resource type="Texture2D" uid="uid://c6adlypk5hvp8" path="res://Tests/buttonsui/Untitled13_20250922143702.png" id="2_3013g"]
[ext_resource type="Script" uid="uid://c4heu6c77qcm0" path="res://Scene/LearningPortal.tscn/Artithmethic_levels/Backbutton.gd" id="2_sjl3w"]
[ext_resource type="Texture2D" uid="uid://b6qxydm14kc8t" path="res://Tests/buttonsui/Untitled13_20250922143711.png" id="3_q2dxk"]

[node name="ArithmeticLevels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bk81l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.109804, 0.14902, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -78.0
offset_right = 495.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "              "
icon = ExtResource("2_3013g")
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "               "
icon = ExtResource("3_q2dxk")
icon_alignment = 1
expand_icon = true

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 3"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 4"

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 5"

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 6"

[node name="Button7" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 7"

[node name="Button8" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 8"

[node name="Button9" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 9"

[node name="Button10" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 10"

[node name="Button11" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 11"

[node name="Button12" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 12"

[node name="Button13" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 13"

[node name="Button14" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LEVEL 14"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
script = ExtResource("2_sjl3w")

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="HBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="HBoxContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="HBoxContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="HBoxContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="HBoxContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="HBoxContainer/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="HBoxContainer/Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="HBoxContainer/Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="HBoxContainer/Button13" to="." method="_on_button_13_pressed"]
[connection signal="pressed" from="HBoxContainer/Button14" to="." method="_on_button_14_pressed"]
